package org.example;

import java.time.LocalDate;

public class Invitado {


    private String nombre;
    private String profesion;
    private LocalDate fecha_visita;
    private int temporada;

    // Constructor que asigna nombre, profesión y temporada, y establece la fecha de visita
    public Invitado(String nombre, String profesion ,int temporada){
        this.nombre = nombre;
        this.profesion = profesion;
        fecha_visita = LocalDate.now(); // Establece la fecha de visita al día de hoy
        this.temporada = temporada;
    }

    //Getters y setters
    public String getNombre() {
        return nombre;
    }

    public void setNombre(String nombre) {
        this.nombre = nombre;
    }

    public int getTemporada() {
        return temporada;
    }

    public void setTemporada(int temporada) {
        this.temporada = temporada;
    }


    public LocalDate getFecha_visita() {
        return fecha_visita;
    }


    public void setFecha_visita(LocalDate fecha_visita) {
        this.fecha_visita = fecha_visita;
    }


    public String getProfesion() {
        return profesion;
    }


    public void setProfesion(String profesion) {
        this.profesion = profesion;
    }

    // Sobrescribe el metodo toString para devolver una representación del invitado en formato texto
    @Override
    public String toString() {
        return "Invitado{" +
                "nombre='" + nombre + '\'' +
                ", profesion='" + profesion + '\'' +
                ", fecha_visita=" + fecha_visita +
                ", temporada=" + temporada +
                '}'; // Devuelve la información del invitado
    }
}
